Added service and controller tests
Updated application.yaml for tests, Updated affected services and controllers